web/src/styles.css
* {
  box-sizing: border-box;
}

body {
  font-size: 2.5rem;
  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI",
    "Roboto", "Helvetica Neue", Arial, sans-serif;

  background: white;
}

.list {
  list-style-type: none;
  display: flex;
}

.list-item {
  display: block;
  padding: 20px;
  margin: 15px;
  border: 1px solid #1DA1F2;
  border-radius: 25px;
  background: #f2f5ff;
  overflow: hidden;
}

.table-wrapper {
  max-width: 1000px;
  margin: auto
}

.stats-p {
  font-size: 1.6rem;
  margin: 0;
}

.translation {
  display: inline;
  margin: "3px";
  font-size: 15px;
}

